Added Basic Scroll Feature

--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@ header.sticky form input[type="text"]:focus {
 
 main {
     overflow-y: auto;
-
+    height: 425px;
     display: flex;
     flex-flow: row wrap;
 }
