--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@ html, body {
     width: 100%;
     height: 100%;
     font-family: "Hack", monospace;
-    overflow: hidden;
     margin: 0;
     padding: 0;
     border: none;
@@ -122,7 +121,7 @@ header.sticky form input[type="text"]:focus {
 
 
 main {
-    overflow-y: auto;
+    overflow-y: hidden;
     max-height: 425px;
     display: flex;
     flex-flow: row wrap;
