--- a/style.css
+++ b/style.css
@@ -33,6 +33,8 @@ body {
 
 .particles {
   position: absolute;
+  min-height: 100%;
+  min-width: 100%;
   left: 0;
   right: 0;
   z-index: -1;
@@ -122,7 +124,6 @@ header.sticky form input[type="text"]:focus {
 
 main {
     overflow-y: hidden;
-    max-height: 425px;
     display: flex;
     flex-flow: row wrap;
 }
